<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/spacing_4x_large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_2x_large"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_description"
        android:textColor="@color/white_transparent_70"
        android:textSize="@dimen/font_size_1x_medium" />

    <EditText
        android:id="@+id/et_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_5x_large"
        android:background="@color/white"
        android:hint="@string/label_email_id"
        android:inputType="textEmailAddress"
        android:padding="@dimen/spacing_large"
        android:textColor="@color/black_transparent_80"
        android:textColorHint="@color/black_transparent_50"
        android:textSize="@dimen/font_size_1x_medium" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@color/white"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:padding="@dimen/spacing_large"
        android:textColor="@color/black_transparent_80"
        android:textColorHint="@color/black_transparent_50"
        android:textSize="@dimen/font_size_1x_medium" />


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_2x_large"
        android:background="@drawable/selector_white"
        android:minHeight="@dimen/btn_height"
        android:text="@string/label_sign_in"
        android:textColor="@color/black_transparent_80" />


</LinearLayout>